==> CortProg/XMC_Cleanflight/src/main/drivers/timer.c <==
#include <stdbool.h>
#include <stdint.h>
#include <string.h>
#include <math.h>
#include "platform.h"
#include "build/atomic.h"
#include "common/utils.h"
#include "drivers/nvic.h"
#include "drivers/io.h"
#include "rcc.h"
#include "drivers/system.h"
#include "timer.h"
#include "timer_impl.h"
#define TIM_N(n) (1 << (n))
#define USED_TIMER_COUNT BITCOUNT(USED_TIMERS)
#define CC_CHANNELS_PER_TIMER 4              // TIM_Channel_1..4
#define TIMER_INDEX(i) BITCOUNT((TIM_N(i) - 1) & USED_TIMERS)

void timerNVICConfigure(uint8_t irq)
{
    NVIC_InitTypeDef NVIC_InitStructure;

    NVIC_InitStructure.NVIC_IRQChannel = irq;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = NVIC_PRIORITY_BASE(NVIC_PRIO_TIMER);
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = NVIC_PRIORITY_SUB(NVIC_PRIO_TIMER);
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
}

void configTimeBase(TIM_TypeDef *tim, uint16_t period, uint8_t mhz)
{
#ifdef XMC4500_F100x1024
	uint32_t* module = NULL;
	uint8_t prescaler = 0;
	uint8_t isCCU8 = 0;

	prescaler = log2f(SystemCoreClock / (mhz * 1000000.0f));

	switch ((uint32_t)tim)
	{
		case (uint32_t)CCU40_CC40:
		case (uint32_t)CCU40_CC41:
		case (uint32_t)CCU40_CC42:
		case (uint32_t)CCU40_CC43:
			module = (uint32_t*)CCU40;
			break;
		case (uint32_t)CCU41_CC40:
		case (uint32_t)CCU41_CC41:
		case (uint32_t)CCU41_CC42:
		case (uint32_t)CCU41_CC43:
			module = (uint32_t*)CCU41;
			break;
		case (uint32_t)CCU42_CC40:
		case (uint32_t)CCU42_CC41:
		case (uint32_t)CCU42_CC42:
		case (uint32_t)CCU42_CC43:
			module = (uint32_t*)CCU42;
			break;
		case (uint32_t)CCU43_CC40:
		case (uint32_t)CCU43_CC41:
		case (uint32_t)CCU43_CC42:
		case (uint32_t)CCU43_CC43:
			module = (uint32_t*)CCU43;
			break;
		case (uint32_t)CCU80_CC80:
		case (uint32_t)CCU80_CC81:
		case (uint32_t)CCU80_CC82:
		case (uint32_t)CCU80_CC83:
			module = (uint32_t*)CCU80;
			isCCU8 = 1;
			break;
		case (uint32_t)CCU81_CC80:
		case (uint32_t)CCU81_CC81:
		case (uint32_t)CCU81_CC82:
		case (uint32_t)CCU81_CC83:
			module = (uint32_t*)CCU81;
			isCCU8 = 1;
			break;
	}

	if (isCCU8)
	{
		XMC_CCU8_SLICE_COMPARE_CONFIG_t slice_config;
		memset(&slice_config, 0, sizeof(slice_config));
		slice_config.prescaler_initval = prescaler;
#ifdef USE_ONBOARD_ESC
		slice_config.invert_out0 = 1;
		slice_config.timer_mode = XMC_CCU8_SLICE_TIMER_COUNT_MODE_CA;
#endif
		XMC_CCU8_SLICE_CompareInit((XMC_CCU8_SLICE_t*)tim, &slice_config);
		XMC_CCU8_SLICE_SetTimerPeriodMatch((XMC_CCU8_SLICE_t*)tim, period - 1);
		XMC_CCU8_EnableShadowTransfer((XMC_CCU8_MODULE_t*)module, 0xFFFF);
	}
	else
	{
		XMC_CCU4_SLICE_COMPARE_CONFIG_t slice_config;
		memset(&slice_config, 0, sizeof(slice_config));
		slice_config.prescaler_initval = prescaler;
#ifdef USE_ONBOARD_ESC
		slice_config.timer_mode = XMC_CCU4_SLICE_TIMER_COUNT_MODE_CA;
		switch ((uint32_t)tim)
		{
			case (uint32_t)CCU40_CC40:
			case (uint32_t)CCU40_CC42:
			case (uint32_t)CCU41_CC40:
			case (uint32_t)CCU42_CC40:
			case (uint32_t)CCU42_CC42:
			case (uint32_t)CCU43_CC40:
				slice_config.passive_level = XMC_CCU4_SLICE_OUTPUT_PASSIVE_LEVEL_HIGH;
				break;
			case (uint32_t)CCU40_CC41:
			case (uint32_t)CCU40_CC43:
			case (uint32_t)CCU41_CC41:
			case (uint32_t)CCU42_CC41:
			case (uint32_t)CCU42_CC43:
			case (uint32_t)CCU43_CC41:
				slice_config.passive_level = XMC_CCU4_SLICE_OUTPUT_PASSIVE_LEVEL_LOW;
				break;
		}
#else
		slice_config.timer_mode = XMC_CCU4_SLICE_TIMER_COUNT_MODE_EA;
		slice_config.passive_level = XMC_CCU4_SLICE_OUTPUT_PASSIVE_LEVEL_HIGH;
#endif
		XMC_CCU4_SLICE_CompareInit((XMC_CCU4_SLICE_t*)tim, &slice_config);
		XMC_CCU4_SLICE_SetTimerPeriodMatch((XMC_CCU4_SLICE_t*)tim, period - 1);
		XMC_CCU4_EnableShadowTransfer((XMC_CCU4_MODULE_t*)module, 0x1111);
	}
#else
    TIM_TimeBaseInitTypeDef  TIM_TimeBaseStructure;

    TIM_TimeBaseStructInit(&TIM_TimeBaseStructure);
    TIM_TimeBaseStructure.TIM_Period = (period - 1) & 0xffff; // AKA TIMx_ARR

    // "The counter clock frequency (CK_CNT) is equal to f CK_PSC / (PSC[15:0] + 1)." - STM32F10x Reference Manual 14.4.11
    // Thus for 1Mhz: 72000000 / 1000000 = 72, 72 - 1 = 71 = TIM_Prescaler
    TIM_TimeBaseStructure.TIM_Prescaler = (SystemCoreClock / timerClockDivisor(tim) / ((uint32_t)mhz * 1000000)) - 1;

    TIM_TimeBaseStructure.TIM_ClockDivision = 0;
    TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;
    TIM_TimeBaseInit(tim, &TIM_TimeBaseStructure);
#endif
}

void timerConfigure(const timerHardware_t *timerHardwarePtr, uint16_t period, uint8_t mhz)
{
    configTimeBase(timerHardwarePtr->tim, period, mhz);

#ifdef XMC4500_F100x1024

#else
    TIM_Cmd(timerHardwarePtr->tim, ENABLE);
#endif

    uint8_t irq = timerInputIrq(timerHardwarePtr->tim);
    timerNVICConfigure(irq);
    // HACK - enable second IRQ on timers that need it
    switch(irq) {
#if defined(STM32F10X)
    case TIM1_CC_IRQn:
        timerNVICConfigure(TIM1_UP_IRQn);
        break;
#endif
#if defined (STM32F40_41xxx) || defined(STM32F411xE)
    case TIM1_CC_IRQn:
        timerNVICConfigure(TIM1_UP_TIM10_IRQn);
        break;
#endif
#if defined (STM32F40_41xxx)
    case TIM8_CC_IRQn:
        timerNVICConfigure(TIM8_UP_TIM13_IRQn);
        break;
#endif
#ifdef STM32F303xC
    case TIM1_CC_IRQn:
        timerNVICConfigure(TIM1_UP_TIM16_IRQn);
        break;
#endif
#if defined(STM32F10X_XL)
    case TIM8_CC_IRQn:
        timerNVICConfigure(TIM8_UP_IRQn);
        break;
#endif
    }
}

void timerChConfigCallbacks(const timerHardware_t *timHw, timerCCHandlerRec_t *edgeCallback, timerOvrHandlerRec_t *overflowCallback)
{
#ifdef XMC4500_F100x1024
#else
    uint8_t timerIndex = lookupTimerIndex(timHw->tim);
    if (timerIndex >= USED_TIMER_COUNT) {
        return;
    }
    uint8_t channelIndex = lookupChannelIndex(timHw->channel);
    if(edgeCallback == NULL)   // disable irq before changing callback to NULL
        TIM_ITConfig(timHw->tim, TIM_IT_CCx(timHw->channel), DISABLE);
    // setup callback info
    timerConfig[timerIndex].edgeCallback[channelIndex] = edgeCallback;
    timerConfig[timerIndex].overflowCallback[channelIndex] = overflowCallback;
    // enable channel IRQ
    if(edgeCallback)
        TIM_ITConfig(timHw->tim, TIM_IT_CCx(timHw->channel), ENABLE);

    timerChConfig_UpdateOverflow(&timerConfig[timerIndex], timHw->tim);
#endif
}

volatile timCCR_t* timerChCCR(const timerHardware_t *timHw)
{
#ifdef XMC4500_F100x1024
	return (volatile timCCR_t*)&((XMC_CCU4_SLICE_t*)timHw->tim)->CRS;
#else
    return (volatile timCCR_t*)((volatile char*)&timHw->tim->CCR1 + timHw->channel);
#endif
}

void timerInit(void)
{
    memset(timerConfig, 0, sizeof (timerConfig));

#ifndef XMC4500_F100x1024
#ifdef CC3D
    GPIO_PinRemapConfig(GPIO_PartialRemap_TIM3, ENABLE);
#endif

    /* enable the timer peripherals */
    for (int i = 0; i < USABLE_TIMER_CHANNEL_COUNT; i++) {
        RCC_ClockCmd(timerRCC(timerHardware[i].tim), ENABLE);
    }

#if defined(STM32F3) || defined(STM32F4)
    for (int timerIndex = 0; timerIndex < USABLE_TIMER_CHANNEL_COUNT; timerIndex++) {
        const timerHardware_t *timerHardwarePtr = &timerHardware[timerIndex];
        IOConfigGPIOAF(IOGetByTag(timerHardwarePtr->tag), IOCFG_AF_PP, timerHardwarePtr->alternateFunction);
    }
#endif
#else

    for (int i=0; i<HARDWARE_TIMER_DEFINITION_COUNT; i+=CC_CHANNELS_PER_TIMER)
    {
    	if(timerDefinitions[i].isCCU8)
    		XMC_CCU8_Init((XMC_CCU8_MODULE_t*)timerDefinitions[i].ccu_global, XMC_CCU8_SLICE_MCMS_ACTION_TRANSFER_PR_CR);
    	else
    		XMC_CCU4_Init((XMC_CCU4_MODULE_t*)timerDefinitions[i].ccu_global, XMC_CCU4_SLICE_MCMS_ACTION_TRANSFER_PR_CR);
    }

    for (int timerIndex = 0; timerIndex < USABLE_TIMER_CHANNEL_COUNT; timerIndex++)
    {
        const timerHardware_t *timerHardwarePtr = &timerHardware[timerIndex];
        IOConfigGPIOAF(IOGetByTag(timerHardwarePtr->tag), IOCFG_AF_PP, timerHardwarePtr->alternateFunction);
    }

#endif

    // initialize timer channel structures
    for(int i = 0; i < USABLE_TIMER_CHANNEL_COUNT; i++)
    {
        timerChannelInfo[i].type = TYPE_FREE;
    }
    for(int i = 0; i < USED_TIMER_COUNT; i++)
    {
        timerInfo[i].priority = ~0;
    }
}

void timerForceOverflow(TIM_TypeDef *tim)
{
    uint8_t timerIndex = lookupTimerIndex((const TIM_TypeDef *)tim);

    ATOMIC_BLOCK(NVIC_PRIO_TIMER) {
#ifndef XMC4500_F100x1024
        // Save the current count so that PPM reading will work on the same timer that was forced to overflow
        timerConfig[timerIndex].forcedOverflowTimerValue = tim->CNT + 1;
        // Force an overflow by setting the UG bit
        tim->EGR |= TIM_EGR_UG;
#else
        timerConfig[timerIndex].forcedOverflowTimerValue = ((XMC_CCU4_SLICE_t*)tim)->TIMER;
        XMC_CCU4_SLICE_ClearTimer((XMC_CCU4_SLICE_t*)tim);
#endif
    }
}
